[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daming-emperor"
version = "0.1.0"
description = "重返大明 - 历代皇帝模拟器"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "streamlit>=1.55.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "streamlit_app.py",
    "README.md",
]
